lectures/intro-antlr/output/SimpleGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\wellington\projects\lectures\compiler-from-scratch\lectures\intro-antlr\SimpleGrammar.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class SimpleGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PRINT=1, SCAN=2, FUNC=3, IF=4, ELSE=5, FOR=6, WHILE=7, STRING=8, INT=9, 
		FLOAT=10, CHAR=11, TYPE=12, MATH=13, FLOOR=14, CEIL=15, SQRT=16, POT=17, 
		FMAX=18, FMIN=19, RINT=20, PONT=21, OPEN=22, CLOSE=23, OPENB=24, CLOSEB=25, 
		SUM=26, SUB=27, MULT=28, DIV=29, MOD=30, COMA=31, EOL=32, EQUAL=33, DEQUAL=34, 
		DSUM=35, DSUB=36, BIGGER=37, SMALLER=38, BEQUAL=39, SMEQUAL=40, NEQUAL=41, 
		AND=42, OR=43, NUM=44, VAR=45, COMMENT=46, LINE_COMMENT=47, WS=48;
	public const int
		RULE_prog = 0, RULE_line = 1, RULE_code = 2, RULE_element = 3, RULE_output = 4, 
		RULE_show = 5, RULE_follow = 6, RULE_tipo = 7, RULE_equals = 8, RULE_cont = 9, 
		RULE_expr = 10, RULE_rest = 11, RULE_fact = 12, RULE_more = 13, RULE_term = 14, 
		RULE_uif = 15, RULE_condition = 16, RULE_comp = 17, RULE_other = 18, RULE_uelse = 19, 
		RULE_uwhile = 20, RULE_ufor = 21, RULE_decl = 22, RULE_incr = 23, RULE_function = 24, 
		RULE_par = 25, RULE_cfunction = 26, RULE_cpar = 27, RULE_input = 28, RULE_value = 29, 
		RULE_umath = 30, RULE_mathpar = 31, RULE_floor = 32, RULE_ceil = 33, RULE_sqrt = 34, 
		RULE_pot = 35, RULE_fmax = 36, RULE_fmin = 37, RULE_rint = 38;
	public static readonly string[] ruleNames = {
		"prog", "line", "code", "element", "output", "show", "follow", "tipo", 
		"equals", "cont", "expr", "rest", "fact", "more", "term", "uif", "condition", 
		"comp", "other", "uelse", "uwhile", "ufor", "decl", "incr", "function", 
		"par", "cfunction", "cpar", "input", "value", "umath", "mathpar", "floor", 
		"ceil", "sqrt", "pot", "fmax", "fmin", "rint"
	};

	private static readonly string[] _LiteralNames = {
		null, "'print'", "'scan'", "'func'", "'if'", "'else'", "'for'", "'while'", 
		"'string'", "'int'", "'float'", "'char'", "'type'", "'math'", "'floor'", 
		"'ceil'", "'sqrt'", "'pot'", "'fmax'", "'fmin'", "'rint'", "'.'", "'('", 
		"')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", "','", "';'", 
		"'='", "'=='", "'+='", "'-='", "'>'", "'<'", "'>='", "'<='", "'!='", "'&&'", 
		"'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PRINT", "SCAN", "FUNC", "IF", "ELSE", "FOR", "WHILE", "STRING", 
		"INT", "FLOAT", "CHAR", "TYPE", "MATH", "FLOOR", "CEIL", "SQRT", "POT", 
		"FMAX", "FMIN", "RINT", "PONT", "OPEN", "CLOSE", "OPENB", "CLOSEB", "SUM", 
		"SUB", "MULT", "DIV", "MOD", "COMA", "EOL", "EQUAL", "DEQUAL", "DSUM", 
		"DSUB", "BIGGER", "SMALLER", "BEQUAL", "SMEQUAL", "NEQUAL", "AND", "OR", 
		"NUM", "VAR", "COMMENT", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SimpleGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SimpleGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SimpleGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SimpleGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public CodeContext code() {
			return GetRuleContext<CodeContext>(0);
		}
		public ITerminalNode EOL() { return GetToken(SimpleGrammarParser.EOL, 0); }
		public LineContext line() {
			return GetRuleContext<LineContext>(0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; code();
			State = 79; Match(EOL);
			State = 80; line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ProgContext prog() {
			return GetRuleContext<ProgContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PRINT:
			case IF:
			case TYPE:
			case VAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82; prog();
				}
				break;
			case CLOSEB:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeContext : ParserRuleContext {
		public ElementContext element() {
			return GetRuleContext<ElementContext>(0);
		}
		public OutputContext output() {
			return GetRuleContext<OutputContext>(0);
		}
		public UifContext uif() {
			return GetRuleContext<UifContext>(0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 4, RULE_code);
		try {
			State = 89;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TYPE:
			case VAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 86; element();
				}
				break;
			case PRINT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; output();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88; uif();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementContext : ParserRuleContext {
		public TipoContext tipo() {
			return GetRuleContext<TipoContext>(0);
		}
		public ITerminalNode VAR() { return GetToken(SimpleGrammarParser.VAR, 0); }
		public EqualsContext equals() {
			return GetRuleContext<EqualsContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ContContext cont() {
			return GetRuleContext<ContContext>(0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_element; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitElement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementContext element() {
		ElementContext _localctx = new ElementContext(Context, State);
		EnterRule(_localctx, 6, RULE_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; tipo();
			State = 92; Match(VAR);
			State = 93; equals();
			State = 94; expr();
			State = 95; cont();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutputContext : ParserRuleContext {
		public ITerminalNode PRINT() { return GetToken(SimpleGrammarParser.PRINT, 0); }
		public ITerminalNode OPEN() { return GetToken(SimpleGrammarParser.OPEN, 0); }
		public ShowContext show() {
			return GetRuleContext<ShowContext>(0);
		}
		public ITerminalNode CLOSE() { return GetToken(SimpleGrammarParser.CLOSE, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_output; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterOutput(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitOutput(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutput(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OutputContext output() {
		OutputContext _localctx = new OutputContext(Context, State);
		EnterRule(_localctx, 8, RULE_output);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(PRINT);
			State = 98; Match(OPEN);
			State = 99; show();
			State = 100; Match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShowContext : ParserRuleContext {
		public ITerminalNode STRING() { return GetToken(SimpleGrammarParser.STRING, 0); }
		public FollowContext follow() {
			return GetRuleContext<FollowContext>(0);
		}
		public ITerminalNode VAR() { return GetToken(SimpleGrammarParser.VAR, 0); }
		public ShowContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_show; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterShow(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitShow(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShow(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShowContext show() {
		ShowContext _localctx = new ShowContext(Context, State);
		EnterRule(_localctx, 10, RULE_show);
		try {
			State = 106;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102; Match(STRING);
				State = 103; follow();
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104; Match(VAR);
				State = 105; follow();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FollowContext : ParserRuleContext {
		public ITerminalNode SUM() { return GetToken(SimpleGrammarParser.SUM, 0); }
		public ITerminalNode STRING() { return GetToken(SimpleGrammarParser.STRING, 0); }
		public FollowContext follow() {
			return GetRuleContext<FollowContext>(0);
		}
		public ITerminalNode VAR() { return GetToken(SimpleGrammarParser.VAR, 0); }
		public FollowContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_follow; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterFollow(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitFollow(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFollow(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FollowContext follow() {
		FollowContext _localctx = new FollowContext(Context, State);
		EnterRule(_localctx, 12, RULE_follow);
		try {
			State = 115;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108; Match(SUM);
				State = 109; Match(STRING);
				State = 110; follow();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111; Match(SUM);
				State = 112; Match(VAR);
				State = 113; follow();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TipoContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(SimpleGrammarParser.TYPE, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipo; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterTipo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitTipo(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TipoContext tipo() {
		TipoContext _localctx = new TipoContext(Context, State);
		EnterRule(_localctx, 14, RULE_tipo);
		try {
			State = 119;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TYPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 117; Match(TYPE);
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EqualsContext : ParserRuleContext {
		public ITerminalNode EQUAL() { return GetToken(SimpleGrammarParser.EQUAL, 0); }
		public EqualsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equals; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterEquals(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitEquals(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquals(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EqualsContext equals() {
		EqualsContext _localctx = new EqualsContext(Context, State);
		EnterRule(_localctx, 16, RULE_equals);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EQUAL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; Match(EQUAL);
				}
				break;
			case SCAN:
			case FUNC:
			case MATH:
			case OPEN:
			case CLOSEB:
			case COMA:
			case EOL:
			case NUM:
			case VAR:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContContext : ParserRuleContext {
		public ITerminalNode COMA() { return GetToken(SimpleGrammarParser.COMA, 0); }
		public ElementContext element() {
			return GetRuleContext<ElementContext>(0);
		}
		public ContContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cont; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterCont(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitCont(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCont(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContContext cont() {
		ContContext _localctx = new ContContext(Context, State);
		EnterRule(_localctx, 18, RULE_cont);
		try {
			State = 128;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COMA:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; Match(COMA);
				State = 126; element();
				}
				break;
			case CLOSEB:
			case EOL:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public FactContext fact() {
			return GetRuleContext<FactContext>(0);
		}
		public RestContext rest() {
			return GetRuleContext<RestContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_expr);
		try {
			State = 134;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SCAN:
			case FUNC:
			case MATH:
			case OPEN:
			case NUM:
			case VAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 130; fact();
				State = 131; rest();
				}
				break;
			case CLOSE:
			case CLOSEB:
			case COMA:
			case EOL:
			case DEQUAL:
			case BIGGER:
			case SMALLER:
			case BEQUAL:
			case SMEQUAL:
			case NEQUAL:
			case AND:
			case OR:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RestContext : ParserRuleContext {
		public ITerminalNode SUM() { return GetToken(SimpleGrammarParser.SUM, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SUB() { return GetToken(SimpleGrammarParser.SUB, 0); }
		public RestContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rest; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.EnterRest(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleGrammarListener typedListener = listener as ISimpleGrammarListener;
			if (typedListener != null) typedListener.ExitRest(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleGrammarVisitor<TResult> typedVisitor = visitor as ISimpleGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRest(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RestContext rest() {
		RestContext _localctx = new RestContext(Context, State);
		EnterRule(_localctx, 22, RULE_rest);
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SUM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136; Match(SUM);
				State = 137; expr();
				}
				break;
			case SUB:
				EnterOuterAlt(_localctx, 2);
				{
				State = 138; Match(SUB);
				State = 139; expr();
				}
				break;
			case CLOSE:
			case CLOSEB:
			case COMA:
			case EOL:
			case DEQUAL:
			case BIGGER:
			case SMALLER:
			case BEQUAL:
			case SMEQUAL:
			case NEQUAL:
			case AND:
			case OR:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
